@@ -391,6 +391,8 @@ class BytesGenerator(Generator):
         if msg._payload is None:
             return
         if _has_surrogates(msg._payload):
+            if self._mangle_from_:
+                msg._payload = fcre.sub(">From ", msg._payload)
             self.write(msg._payload)
         else:
             super(BytesGenerator,self)._handle_text(msg)
